Qa 대응
- firebase의존성 및 구현체 제거
- Expo Client 요청/응답 객체 수정
- 푸시 테스트 관련 환경 잡기
